[project]
name = "dwd-hf-exporter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.41.1",
    "huggingface-hub>=1.1.5",
    "python-dotenv>=1.2.1",
    "xarray>=2025.10.1",
    "zarr==3.1.3",
    "netCDF4==1.7.3",
    "fsspec",
    "ocf-blosc2",
    "hf-transfer>=0.1.9",
]
